Migrate to Java 8 Worker works perfectly as instance